--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html>
 <head>
     <title>Lauren Grey</title>
         <link rel="stylesheet" href="css/style.css">
@@ -52,8 +53,6 @@
             </div>
         </div>
     </section>
-
-
 
 
 
@@ -136,6 +135,8 @@
         }
     </script>
 </section>
+
+
 
 <!-- Footer HTML -->
 
