--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      
  <div class="inline-block"></div>
  <div class="logo">
-     <img src="M17FINALTURNIN/M17_FINAL_TURNIN_LG/images/LG logo.jpg" alt="LG logo" class="center" width="100" height="100">
+     <img src="images/LG logo.jpg" alt="LG logo" class="center" width="100" height="100">
  </div>
      <nav class="inline-block">
      <ul style="font-family:Verdana, Geneva, Tahoma, sans-serif;">
